--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,6 +24,8 @@
 }
 
 body {
+  margin: 0;
+
   color: #2a2626;
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
@@ -33,6 +35,8 @@ body {
 h1,
 h2,
 h3 {
+  margin: 0;
+
   font-weight: 400;
   font-family: "Neucha", sans-serif;
   line-height: 1.2em;
@@ -55,7 +59,7 @@ h3 {
   position: relative;
 
   max-width: 1110px;
-  margin: 100px auto;
+  margin: 100px 165px;
 
   text-align: center;
 }
@@ -82,24 +86,17 @@ h3 {
   /* overflow: hidden; не понимаю куда нужно добавить это свойство, потмоу что если его добавить в контейнер, он режет картинку, а по макету так делать не надо */
 }
 
-.header-text {
-  position: absolute;
-  top: 55px;
-}
+/* .bg-header {
+  background-color: #b09a81; исправить заливку
+} */
 
-.header-h1 {
+.h1-span {
   color: #fe8a02;
-
-  text-align: left;
-}
-
-.header-h1-span {
-  color: #2a2626;
 }
 
 .main-img {
   position: absolute;
-  top: 55px;
+  top: -55px;
   right: -270px;
 
   max-width: 100%;
@@ -109,11 +106,13 @@ h3 {
 
 .text-columns {
   position: relative;
-  top: 185px;
+  bottom: -230px;
 
   text-align: left;
   column-count: 2;
   column-gap: 30px;
+
+  /* z-index: 1; не сработало, картинка накладывается на текст */
 }
 
 .text-columns p {
@@ -135,4 +134,30 @@ h3 {
   text-decoration: none;
 
   background-color: #fe8a02;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  height: 714px;
+}
+
+.section-h1 {
+  margin-bottom: 30px;
+
+  text-align: center;
+}
+
+.section-video-text {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+.video {
+  margin-left: 96px;
+
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
