--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -70,8 +70,9 @@ h3 {
 
   display: block;
 
-  width: 100%;
-  height: 100%;
+  width: 1440px;
+  height: 914px; /* нужно исправить, значения подобраны вручную */
+  overflow: hidden;
 
   background-color: #b09a81;
 
@@ -96,7 +97,7 @@ h3 {
 
 .main-img {
   position: absolute;
-  top: -55px;
+  top: 55px;
   right: -270px;
 
   max-width: 100%;
@@ -123,7 +124,7 @@ h3 {
   break-inside: avoid;
 }
 
-.botton-header {
+.button-header {
   position: relative;
   top: 40px;
 
@@ -136,7 +137,7 @@ h3 {
   background-color: #fe8a02;
 }
 
-.botton-header:hover {
+.button-header:hover {
   background-color: #ea7600;
 }
 
@@ -147,6 +148,7 @@ h3 {
 
 header {
   height: 714px;
+  overflow: hidden;
 }
 
 .section-h1 {
@@ -174,5 +176,81 @@ header {
 }
 
 #navigation {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-top: 200px;
+  padding-bottom: 80px;
+
   background-color: #42413c;
+}
+
+.button-navigation {
+
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  height: 340px;
+
+  margin-bottom: 20px;
+
+  padding: 24px;
+
+  border: 0;
+
+  color: #2a2626;
+  text-decoration: none;
+
+  background-color: #f5f4f0;
+}
+
+.button-h1 {
+
+  width: 350px;
+  height: 340px;
+  margin: 0;
+  padding: 0;
+
+  background-color: #42413c;
+}
+
+#navigation div h1 {
+  color: #fff;
+  font-size: 52px;
+}
+
+#navigation button a h3 {
+  color: #fe8a02;
+}
+
+.h2-number {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 40px;
+
+  font-size: 64px;
+  font-family: "Neucha", sans-serif;
+  line-height: 1em;
+}
+
+#navigation button a {
+  color: #2a2626;
+  text-align: left;
+  text-decoration: none;
+}
+
+#navigation button p {
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  line-height: 1.6em;
+}
+
+.button-navigation:hover {
+  background-color: #fe8a02;
+}
+
+#navigation button:hover a h2,
+#navigation button:hover a h3,
+#navigation button:hover a p {
+  color: #fff;
 }
