--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -91,6 +91,31 @@ h3 {
   background-color: #b09a81; исправить заливку
 } */
 
+.bg {
+  position: absolute;
+  top: 0;
+  left: -165px;
+
+  z-index: -1;
+
+  display: block;
+
+  width: 1605px;
+  height: 960px; /* нужно исправить, значения подобраны вручную */
+  margin: 0;
+  overflow: hidden;
+
+  background-color: #b09a81;
+
+  background-image: url(../../images/background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  opacity: 10%;
+
+  content: "";
+}
+
 .h1-span {
   color: #fe8a02;
 }
@@ -118,6 +143,10 @@ h3 {
 
 .text-columns p {
   margin-top: 0;
+}
+
+.first-colum {
+  break-after: column;
 }
 
 .second-column {
@@ -186,7 +215,6 @@ header {
 }
 
 .button-navigation {
-
   display: flex;
   flex-direction: column;
   width: 350px;
@@ -205,7 +233,6 @@ header {
 }
 
 .button-h1 {
-
   width: 350px;
   height: 340px;
   margin: 0;
@@ -253,4 +280,69 @@ header {
 #navigation button:hover a h3,
 #navigation button:hover a p {
   color: #fff;
+}
+
+.effect-columns {
+  text-align: left;
+  column-count: 2;
+  column-gap: 30px;
+}
+
+.effect-img {
+  width: 578px;
+
+  vertical-align: middle;
+
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
+}
+
+.img {
+  padding-bottom: 100px;
+}
+
+.effect-columns p {
+  margin-top: 0;
+}
+
+.line-h3 {
+
+  margin-bottom: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+
+  padding-left: 10px;
+
+  color: #fff;
+
+  background-color: #b09a81;
+}
+
+.line-h3 h3 {
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+}
+
+.second-column h2 {
+  margin-bottom: 30px;
+}
+
+.second-column {
+  margin-left: 30px;
+}
+
+.first-p {
+  margin: 0;
+
+  color: #908d8b;
+  font-weight: 400;
+  font-size: 24px;
+  font-family: "Neucha", sans-serif;
+  line-height: 1.2em;
+}
+
+.second-p {
+  font-weight: 400;
+  font-size: 34px;
+  font-family: "Neucha", sans-serif;
+  line-height: 1.2em;
 }
