--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -87,10 +87,6 @@ h3 {
   /* overflow: hidden; не понимаю куда нужно добавить это свойство, потмоу что если его добавить в контейнер, он режет картинку, а по макету так делать не надо */
 }
 
-/* .bg-header {
-  background-color: #b09a81; исправить заливку
-} */
-
 .bg {
   position: absolute;
   top: 0;
@@ -355,6 +351,114 @@ header {
 
   background-color: #b09a81;
   opacity: 10%;
+}
+
+.footer-columns {
+
+  color: #fff;
+  text-align: left;
+  column-count: 2;
+
+  background-color: #42413c;
+
+  /* height: 191px; высота больше чем в шаблоне */
+}
+
+.footer-first-colum {
+  break-after: column;
+
+  margin: 0;
+  padding: 55px;
+}
+
+.footer-form {
+  padding-top: 38px;
+  padding-right: 55px;
+  padding-bottom: 40px;
+}
+
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.button-footer {
+  width: 70px;
+  height: 50px;
+  padding: 0;
+  border: 0;
+
+  background-color: #fe8a02;
+}
+
+.email-adress-footer {
+  display: block;
+  width: 100%;
+  height: 50px;
+  margin: 0;
+  padding: 0;
+  border: none;
+
+  outline: none;
+}
+
+.email-adress-footer::placeholder {
+  font-size: 13.1px;
+  font-family: "Open Sans", sans-serif;
+}
+
+.row input {
+  padding-left: 15px;
+}
+
+.email-adress-p {
+  margin-top: 0;
+  margin-bottom: 9px;
+
+  font-size: 18px;
+  font-family: "Open Sans", sans-serif;
+}
+
+.service-rules {
+  margin-top: 0;
+  margin-bottom: 0;
+
+  color: #fff;
+  font-size: 12px;
+  font-family: "Open Sans", sans-serif;
+}
+
+.bg-button-footer::before {
+  display: block;
+
+  width: 20px;
+  height: 20px;
+  margin: auto;
+  overflow: hidden;
+
+  background-color: #fe8a02;
+
+  background-image: url(../../images/send.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  content: "";
+}
+
+.contact-information {
+  padding-top: 60px;
+}
+
+.contact-information p {
+  margin: 0;
+
+  font-size: 14px;
+}
+
+.contact-information p:nth-child(2) {
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 #hyperbolic-depreciation {
