--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -76,7 +76,7 @@ h3 {
 
   background-color: #b09a81;
 
-  background-image: url(../../images/background.png);
+  background-image: url("../images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -103,7 +103,7 @@ h3 {
 
   background-color: #b09a81;
 
-  background-image: url(../../images/background.png);
+  background-image: url("../images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -128,7 +128,7 @@ h3 {
 
   background-color: #b09a81;
 
-  background-image: url(../../images/background.png);
+  background-image: url("../images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -144,7 +144,7 @@ h3 {
 .main-img {
   position: absolute;
   top: 55px;
-  right: -270px;
+  left: 461px;
 
   max-width: 100%;
   height: 525px;
@@ -354,7 +354,6 @@ header {
 }
 
 .footer-columns {
-
   color: #fff;
   text-align: left;
   column-count: 2;
@@ -439,7 +438,7 @@ header {
 
   background-color: #fe8a02;
 
-  background-image: url(../../images/send.svg);
+  background-image: url("../images/send.svg");
   background-repeat: no-repeat;
   background-size: cover;
 
