--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -283,16 +283,22 @@ header {
   column-gap: 30px;
 }
 
+.column-width {
+  column-width: 502px;
+}
+
+.img-column {
+  position: relative;
+  left: -37px;
+}
+
 .effect-img {
-  width: 578px;
-
-  vertical-align: middle;
-
+  /* width: 578px; */
   filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
 
 .img {
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
 }
 
 .effect-columns p {
@@ -300,6 +306,7 @@ header {
 }
 
 .line-h3 {
+  margin-top: 100px;
   margin-bottom: 30px;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -517,9 +524,9 @@ header {
   margin-left: 0;
 }
 
-#premature-optimization div:last-child {
-  margin-left: -10px;
-}
+/* #premature-optimization div:last-child {
+  margin-left: 0px;
+}  */
 
 #navigation div h1 {
   color: #fff;
