--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -298,7 +298,7 @@ header {
 }
 
 .img {
-  /* padding-bottom: 100px; */
+  padding-bottom: 100px;
 }
 
 .effect-columns p {
@@ -306,7 +306,7 @@ header {
 }
 
 .line-h3 {
-  margin-top: 100px;
+  /* margin-top: 100px; */
   margin-bottom: 30px;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -365,8 +365,6 @@ header {
   column-count: 2;
 
   background-color: #42413c;
-
-  /* height: 191px; высота больше чем в шаблоне */
 }
 
 .footer-first-colum {
