--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -290,6 +290,7 @@ header {
 
 .effect-img {
   /* width: 578px; */
+  z-index: 1;
   filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
 
@@ -317,8 +318,8 @@ header {
 }
 
 .line-h3-img-right {
-  margin-top: 95px;
-  margin-bottom: 30px;
+  margin-top: 94px;
+  margin-bottom: 20px;
 
   color: #fff;
 
